@@ -1,3 +1,10 @@
+2011-10-02  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Establish cache directory for source archive downloads.
+
+	* src/mkpath.h (pkgSourceArchivePath): New function; declare it.
+	* src/mkpath.c (pkgSourceArchivePath): Implement it.
+
 2011-08-30  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Support archive extraction to arbitrary destination without install.
